cmake_minimum_required(VERSION 3.0)
project(my_solutions_to_hackerrank)

set(CMAKE_CXX_STANDARD 17)

add_executable(Substring_Diff Substring_Diff.cpp)
add_executable(Play_with_words Play_with_words.cpp)
add_executable(Count_Luck Count_Luck.cpp)
add_executable(Cut_the_Tree Cut_the_Tree.cpp)
add_executable(Pairs Pairs.cpp)
add_executable(Connected_Cells_in_a_Grid Connected_Cells_in_a_Grid.cpp)