cmake_minimum_required(VERSION 3.0)
project(my_solutions_to_hackerrank)

set(CMAKE_CXX_STANDARD 17)

add_executable(Substring-Diff Substring-Diff.cpp)
add_executable(Play-with-words Play-with-words.cpp)
add_executable(Count-Luck Count-Luck.cpp)
add_executable(Cut-the-Tree Cut-the-Tree.cpp)
add_executable(Pairs Pairs.cpp)
add_executable(Connected-Cells-in-a-Grid Connected-Cells-in-a-Grid.cpp)