cmake_minimum_required(VERSION 3.0)
project(my_solutions_to_hackerrank)
set(CMAKE_CXX_STANDARD 17)

add_executable(Abbreviation  Abbreviation.cpp)
add_executable(Absolute-Permutation  Absolute-Permutation.cpp)
add_executable(Angry-Children-2  Angry-Children-2.cpp)
add_executable(Bigger-is-Greater  Bigger-is-Greater.cpp)
add_executable(Climbing-the-Leaderboard  Climbing-the-Leaderboard.cpp)
add_executable(Connected-Cells-in-a-Grid  Connected-Cells-in-a-Grid.cpp)
add_executable(Construct-the-Array  Construct-the-Array.cpp)
add_executable(Count-Luck  Count-Luck.cpp)
add_executable(Cut-the-Tree  Cut-the-Tree.cpp)
add_executable(Forming-a-Magic-Square  Forming-a-Magic-Square.cpp)
add_executable(main  main.cpp)
add_executable(Non-Divisible-Subset  Non-Divisible-Subset.cpp)
add_executable(Pairs  Pairs.cpp)
add_executable(Play-with-words  Play-with-words.cpp)
add_executable(Sam-and-substrings  Sam-and-substrings.cpp)
add_executable(Sherlock-and-Cost  Sherlock-and-Cost.cpp)
add_executable(Substring-Diff  Substring-Diff.cpp)
add_executable(The-Grid-Search  The-Grid-Search.cpp)
add_executable(The-Maximum-Subarray  The-Maximum-Subarray.cpp)
